--- a/ProyectoF/index-directivo.html
+++ b/ProyectoF/index-directivo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AsisTech - Panel Directivo</title>
+    <title>AsisTech - Directivo</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome para iconos -->
@@ -21,7 +21,7 @@
             </div>
             <div style="color: var(--gray-800); font-weight: 600;">
                 <i class="fas fa-user-shield"></i>
-                Panel Directivo
+                Directivo
             </div>
         </header>
 
@@ -30,7 +30,7 @@
                 <section class="form-section">
                     <h2>
                         <i class="fas fa-chart-bar"></i>
-                        Dashboard Institucional de Asistencias
+                        Tabla Institucional de Asistencias
                     </h2>
                     
                     <!-- Tarjetas de resumen general -->
@@ -63,7 +63,7 @@
                     <div class="form-group">
                         <label for="reporte-tipo">
                             <i class="fas fa-filter"></i>
-                            Tipo de Reporte
+                            Tipo de reporte
                         </label>
                         <select id="reporte-tipo">
                             <option value="general">Reporte General Institucional</option>
@@ -235,11 +235,6 @@
                     <button id="btn-exportar-pdf" class="btn btn-secondary" style="background: var(--purple-gradient);">
                         <i class="fas fa-file-pdf"></i>
                         Exportar a PDF
-                    </button>
-                    <button id="btn-configuracion" class="btn btn-secondary" style="background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%);">
-                        <i class="fas fa-cog"></i>
-                        Configuración
-                    </button>
                 </div>
             </div>
         </main>
