--- a/ProyectoF/index-alumno.html
+++ b/ProyectoF/index-alumno.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AsisTech - Panel Estudiante</title>
+    <title>AsisTech - Estudiante</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome para iconos -->
@@ -25,7 +25,7 @@
             <div class="header">
                 <h1>
                     <i class="fas fa-user-graduate"></i>
-                    Panel Estudiante
+                    Estudiante
                 </h1>
             </div>
 
