--- a/ProyectoF/index-docente.html
+++ b/ProyectoF/index-docente.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AsisTech - Panel Docente</title>
+    <title>AsisTech - Docente</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome para iconos -->
@@ -21,7 +21,7 @@
             </div>
             <div style="color: var(--gray-800); font-weight: 600;">
                 <i class="fas fa-chalkboard-teacher"></i>
-                Panel Docente
+                Docente
             </div>
         </header>
 
@@ -29,7 +29,7 @@
             <div class="card">
                 <button id="btn-directivo" class="btn-directivo">
                     <i class="fas fa-user-shield"></i>
-                    VISTA DIRECTIVO
+                    VISTA DOCENTE
                 </button>
 
                 <section class="form-section">
